--- a/news24-houre.css
+++ b/news24-houre.css
@@ -12,18 +12,25 @@ body {
 a {
     text-decoration: none;
     color: #000;
-
+    font-size: 16px;
+    font-weight: 700;
+}
+.myimage{
+    width: 60px;
+    border-radius: 50%;
+    margin-left: 5px;
 }
 
 #nav-01 {
     border-bottom: 0.5px solid rgb(109, 107, 107);
-    padding-bottom: 10px;
+
 }
 
 .logo-style {
     color: rgb(12, 38, 187);
-    padding: 2px 5px;
+    padding: 2px 1px;
     font-weight: 900;
+    
 }
 
 /* -----------------------Category navbar--------------------- */
@@ -123,6 +130,7 @@ nav .fa-solid {
 
         .nav-links ul li a{
             color: #fff;
+            font-size: 16px !important;
         }
     .nav-links ul li {
         display: block;
@@ -130,9 +138,9 @@ nav .fa-solid {
 
     .nav-links {
         position: fixed;
-        background: #0a14a0;
+        background: #1616178c;
         height: 100vh;
-        width: 200px;
+        width: 250px;
         top: 0;
         right: -300px;
         text-align: left;
@@ -151,7 +159,28 @@ nav .fa-solid {
 
     .nav-links {
         padding: 30px;
+      
     }
+    .navbar-brand{
+        font-size: 14px;
+    }
+    .logo-style{
+      padding: 2px 0 !important;
+    }
+        .myimage{
+           display: none;
+        }
+        a{
+            font-size: 10px !important;
+        }
+}
+
+
+.pss{
+    background-color: rgb(222, 222, 222);
+    font-size: 18px;
+    font-weight: 700;
+    color: rgb(97, 97, 97);
 }
 
 /* ============navbar end================ */
