--- a/news24-houre.css
+++ b/news24-houre.css
@@ -34,7 +34,7 @@ header a {
 }
 
 #nav-01 {
-    border-bottom: 0.5px solid rgb(109, 107, 107);
+    box-shadow: 0px 0px 12px 0px #888888;
 
 }
 
@@ -44,6 +44,12 @@ header a {
     font-weight: 900;
     font-size: 25px;
 
+}
+.navbar-brand{
+    color: rgb(21, 21, 21);
+        padding: 2px 1px;
+        font-weight: 900;
+        font-size: 25px;
 }
 
 /* -----------------------Category navbar--------------------- */
@@ -185,7 +191,7 @@ nav .fa-solid {
     }
 
     .navbar-brand {
-        display: none !important;
+        /* display: none !important; */
     }
 
     .logo-style {
@@ -205,6 +211,7 @@ nav .fa-solid {
         background-color: rgb(222, 222, 222);
         font-size: 12px !important;
         font-weight: 200;
+        box-shadow: 0px 5px 12px 3px #585858;
 
 
     }
